fixed footer padding on mobile

--- a/css/base.scss
+++ b/css/base.scss
@@ -218,7 +218,6 @@ h2 {
         }
     }
     .footer {
-        padding: 0 8px;
         height: 6vh;
     }
 }
