--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,6 @@ h2 {
       text-align: center; }
 
   .footer {
-    padding: 0 8px;
     height: 6vh; } }
 @media screen and (min-width: 1024px) {
   .intro {
